--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 			<h2>Tell Me When You're Ready.<br> Let the Training Begin</h2>
 			<a class="start" href="">Start <i class="fa fa-play-circle"></i></a>
 		</div>
+
+		<div class="status-bar">
+			<i class="right fa fa-check-circle-o"></i> <!-- for correct Move -->
+			<i class="wrong fa fa-ban"></i> <!-- for wrong move -->
+			<span class="bar-items score-card">Score : </span>
+			<span class="bar-items move-card">Moves : </span>
+		</div>
+
 		<div class="jumbotron">
 			<div class = "tiles grid"></div> <!-- #1 -->
 			<div class = "tiles grid"></div> <!-- #2 -->
