--- a/index.html
+++ b/index.html
@@ -25,24 +25,29 @@
 		</div>
 
 		<div class="jumbotron">
-			<div class = "tiles grid"></div> <!-- #1 -->
-			<div class = "tiles grid"></div> <!-- #2 -->
-			<div class = "tiles grid"></div> <!-- #3 -->
-			<div class = "tiles grid"></div> <!-- #4 -->
-			<div class = "tiles grid"></div> <!-- #5 -->
-			<div class = "tiles grid"></div> <!-- #6 -->
-			<div class = "tiles grid"></div> <!-- #7 -->
-			<div class = "tiles grid"></div> <!-- #8 -->
-			<div class = "tiles grid"></div> <!-- #9 -->
-			<div class = "tiles grid"></div> <!-- #10 -->
-			<div class = "tiles grid"></div> <!-- #11 -->
-			<div class = "tiles grid"></div> <!-- #12 -->
-			<div class = "tiles grid"></div> <!-- #13 -->
-			<div class = "tiles grid"></div> <!-- #14 -->
-			<div class = "tiles grid"></div> <!-- #15 -->
-			<div class = "tiles grid"></div> <!-- #16 -->
+			<div id = "d0" class = "tiles grid"><p>Tile 1</p></div> <!-- #1 -->
+			<div id = "d1" class = "tiles grid"><p>Tile 2</p></div> <!-- #2 -->
+			<div id = "d2" class = "tiles grid"><p>Tile 3</p></div> <!-- #3 -->
+			<div id = "d3" class = "tiles grid"><p>Tile 4</p></div> <!-- #4 -->
+			<div id = "d4" class = "tiles grid"><p>Tile 5</p></div> <!-- #5 -->
+			<div id = "d5" class = "tiles grid"><p>Tile 6</p></div> <!-- #6 -->
+			<div id = "d6" class = "tiles grid"><p>Tile 7</p></div> <!-- #7 -->
+			<div id = "d7" class = "tiles grid"><p>Tile 8</p></div> <!-- #8 -->
+			<div id = "d8" class = "tiles grid"><p>Tile 9</p></div> <!-- #9 -->
+			<div id = "d9" class = "tiles grid"><p>Tile 10</p></div> <!-- #10 -->
+			<div id = "d10" class = "tiles grid"><p>Tile 11</p></div> <!-- #11 -->
+			<div id = "d11" class = "tiles grid"><p>Tile 12</p></div> <!-- #12 -->
+			<div id = "d12" class = "tiles grid"><p>Tile 13</p></div> <!-- #13 -->
+			<div id = "d13" class = "tiles grid"><p>Tile 14</p></div> <!-- #14 -->
+			<div id = "d14" class = "tiles grid"><p>Tile 15</p></div> <!-- #15 -->
+			<div id = "d15" class = "tiles grid"><p>Tile 16</p></div> <!-- #16 -->
 		</div>
 
+
+
+
+
+<script src = "functions.js" type="text/javascript"></script>
+<script src = "javascript.js" type="text/javascript"></script>
 	</body>
-	<script src = "javascript.js" type="text/javascript"></script>
 </html>
