--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 		<div class="game-end jumbotron">
-		<p class = "end"> Congratulations !<br> You've Completed The Game !</p>
+		<p class = "end"> Congratulations !<br> You've Completed The Game ! <br> <span class="i-score r"></span> <span class="i-score m">Moves -> </span> <span class="i-score t">Time -> </span></p>
 		<div class="leader">
 			<div class="title-bar">
 			<span id = "attempt" class ="titles">Attempt</span>
