--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<script src = "https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>  <!-- Including Jquery File -->
 		 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">  
 		<link rel="stylesheet" type="text/css" href="css.css"> <!-- Including CSS File -->
+		<link rel="stylesheet" href="fontawesome-all.min.css">
 		<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+		
+		<script src="jQuery.js" type="text/javascript"></script>
 		<meta name="viewport" content="ice-width,initial-scale=1.0, maximum-scale=1.0"/>
 		<!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
 		<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
